[package]
authors = ["Jan Likar <likar.jan@gmail.com>"]
description = "A cargo subcommand to fetch the source code of a Rust crate"
documentation = "https://github.com/JanLikar/cargo-clone"
homepage = "https://github.com/JanLikar/cargo-clone"
keywords = ["cargo", "subcommand", "clone"]
license = "Apache-2.0/MIT"
name = "cargo-clone"
readme = "README.md"
repository = "https://github.com/JanLikar/cargo-clone"
version = "0.1.3"
[dependencies]
cargo = "0.30.0"
docopt = "1.0.0"
failure = "0.1"
serde = "1.0.80"
serde_derive = "1.0.80"
walkdir = "1"
