[package]
authors = ["Jan Likar <likar.jan@gmail.com>"]
description = "A cargo subcommand to fetch the source code of a Rust crate"
documentation = "https://github.com/JanLikar/cargo-clone"
homepage = "https://github.com/JanLikar/cargo-clone"
keywords = ["cargo", "subcommand", "clone"]
license = "Apache-2.0/MIT"
name = "cargo-clone"
readme = "README.md"
repository = "https://github.com/JanLikar/cargo-clone"
version = "0.1.4"
edition = "2018"

[dependencies]
anyhow = "1.0.52"
cargo = "0.58.0"
docopt = "1.0.0"
semver = "1.0.4"
serde = { version = "1.0.80", features = ["derive"] }
walkdir = "1"
