[package]
authors = ["Jan Likar <likar.jan@gmail.com>"]
description = "A cargo subcommand to fetch the source code of a Rust crate"
documentation = "https://github.com/JanLikar/cargo-clone"
homepage = "https://github.com/JanLikar/cargo-clone"
keywords = ["cargo", "subcommand", "clone"]
license = "Apache-2.0/MIT"
name = "cargo-clone"
readme = "README.md"
repository = "https://github.com/JanLikar/cargo-clone"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
cargo = "0.58.0"
clap = "2.34.0"
semver = "1.0.4"
walkdir = "2.3.2"

[dev-dependencies]
tempdir = "0.3.5"
