[package]
authors = ["Jan Likar <jan.likar@protonmail.com>"]
name = "cargo-clone-core"
version = "0.2.2"
edition = "2021"
description = "A library to fetch the source code of a Rust crate"
documentation = "https://github.com/JanLikar/cargo-clone"
homepage = "https://github.com/JanLikar/cargo-clone"
keywords = ["cargo", "subcommand", "clone"]
license = "Apache-2.0/MIT"
repository = "https://github.com/JanLikar/cargo-clone"

[dependencies]
anyhow.workspace = true
cargo.workspace = true
semver = "1.0.23"
walkdir = "2.5.0"
url = "2.5.2"

[dev-dependencies]
tempfile.workspace = true
