[package]
authors = ["Jan Likar <jan.likar@protonmail.com>"]
name = "cargo-clone-core"
version = "0.2.3"
edition = "2024"
description = "A library to fetch the source code of a Rust crate"
documentation = "https://github.com/JanLikar/cargo-clone"
homepage = "https://github.com/JanLikar/cargo-clone"
keywords = ["cargo", "subcommand", "clone"]
license = "Apache-2.0/MIT"
repository = "https://github.com/JanLikar/cargo-clone"

[dependencies]
anyhow.workspace = true
cargo.workspace = true
semver = "1.0.26"
walkdir = "2.5.0"
url = "2.5.4"

[dev-dependencies]
tempfile.workspace = true
